<resources>
    <string name="app_name">C&amp;M Incidents</string>
    <string name="title_activity_add_incident">AddIncidentActivity</string>
    <string name="event_name_string">Event name</string>
    <string name="c_absence_label">C Absent</string>
    <string name="m_absence_label">M Absent</string>
    <string name="both_absent_label">Both are absent</string>
    <string name="time_late_label">Time Late</string>
    <string name="save_button">Save</string>
    <string name="n_a_string">n/a</string>
    <string name="absence_label">Absence</string>
    <string name="expected_label">Expected</string>
    <string name="absent_label">Absent</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
