<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_incident_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.abetorres.cmincidents.AddIncidentActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name_string"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/event_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/absence_label"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C: "
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/c_expected_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/expected_label"
            android:onClick="expectedCheck"/>
        <CheckBox
            android:id="@+id/camile_absent_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:text="@string/absent_label"
            android:onClick="absentCheck"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="M: "
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/m_expected_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/expected_label"
            android:onClick="expectedCheck"/>
        <CheckBox
            android:id="@+id/michael_absent_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:text="@string/absent_label"
            android:onClick="absentCheck"/>

    </LinearLayout>

    <TextView
        android:text="@string/time_late_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">
        <EditText
            android:id="@+id/hours_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="HH"
            android:inputType="number"/>
        <EditText
            android:id="@+id/minutes_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="MM"
            android:inputType="number"/>
        <CheckBox
            android:id="@+id/n_a_late_check_button"
            android:layout_marginLeft="10dp"
            android:text="@string/n_a_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_button"
        android:onClick="onClickSave"/>
</LinearLayout>
